Further testing to fix to x-axis overflow and navbar.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,7 +13,7 @@
 @keyframes slideInLeft {
   from {
     opacity: 0;
-    transform: translateX(-100vw);
+    transform: translateX(-100%);
     
   }
   to {
@@ -25,7 +25,7 @@
 @keyframes slideInRight {
   from {
     opacity: 0;
-    transform: translateX(100vw);
+    transform: translateX(100%);
     
   }
   to {
